# reddit-search

./: .dockerignore  .env-sample  Dockerfile  Makefile  README.md  app.py  pyproject.toml  requirements.txt  testrun.py
redditsearch/: app.py  engine.py  utils.py
redditsearch/llm/: output_examples.py  postprocessing.py  prompts.py  summarize.py
redditsearch/misc/: data_models.py
redditsearch/reddit/: scrape.py  textprocess.py
src/reddit/: scrape.py
testing/: env_vars_testing.ipynb  openai_api.ipynb  reddit_api.ipynb  search_testing.ipynb
