[tool.poetry]
name = "reddit-search"
version = "0.1.0"
description = "reddit search engine"
authors = ["Daniel <thefunnyonion@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
praw = "^7.8.1"
pydantic-settings = "^2.7.1"
pandas = "^2.2.3"
loguru = "^0.7.3"
openai = "^1.59.8"
streamlit = "^1.41.1"
streamlit-plotly-events = "^0.0.6"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
